# self-expanding-nets

./: .gitignore  README.md  pyproject.toml  sparse_simple_network.ipynb
experiments/: test_init.ipynb
experiments/edge_finder/: Edge_metric.md  edge_finder_v1.ipynb  edge_finder_v2.ipynb
experiments/sparse_and_edge_finder/: edge_finder.py  metric_of_sparse_recursive_linear.ipynb  nonlinearity_metrics.py  sparse_linear.py
experiments/sparse_experiments/: sensitivitybasedprune-sparse.ipynb  sparse_putting_recursive_main_weight_matrix.ipynb  sparse_simple_network.ipynb
experiments/speed_eval/: recursive_model_speed_tests.ipynb  speed_metrics.py  vanya_sparse_recursive.ipynb
experiments/training/: AddNIST_simple.ipynb  Gutenberg_experiment.ipynb  Language_experiment.ipynb  MultNIST_experiment.ipynb  california.ipynb  chesseract.ipynb  cifar10.ipynb  cifar10backbone.ipynb  cifar10fcn.ipynb  expand_cifar10_test.ipynb  expand_divergence.ipynb  experiment.ipynb  fashion_mnist.ipynb  fcn_cifar10.ipynb  fcn_fashion_mnist.ipynb  mnist.ipynb  old_fcn_fashion_mnist.ipynb  phishing_sites.ipynb  teacher-student.ipynb  titanic.ipynb  titanic_binary_classification.ipynb  titanic_classification.ipynb
senmodel/metrics/: edge_finder.py  nonlinearity_metrics.py  train_metrics.py
senmodel/model/: SENLinear.py  model.py  pseudo_layer_testing.ipynb  utils.py
senmodel/train/: train.py
speed_eval/: linear_speed_tests.ipynb  pruning.py  sparse_model.py  speed_metrics.py  train.py
src/: model.py
src/metrics/: edge_finder.py
src/model/: SENLinear.py  model.py
(+8 files in other folders)
