[build-system]
requires = ['setuptools >= 61.0.0', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'senmodel'
version = '1.0.0'
authors = []
description = 'self-expanding-nets'
readme = 'README.md'
requires-python = '>= 3.10'
dependencies = [
    'torch', 'torchvision']

[tool.setuptools.packages]
find = { }
